# PySapScript

./: .gitignore  .readthedocs.yaml  pyproject.toml  readme.md  setup.cfg
docs/: index.html  pysapscript.html  search.js  shell_table.html  shell_tree.html  window.html
docs/pysapscript/: index.html  pysapscript.html  types_.html  utils.html  window.html
docs/pysapscript/types_/: exceptions.html  types.html
docs/pysapscript/utils/: utils.html
docs/types_/: exceptions.html  index.html  types.html
docs/utils/: index.html  utils.html
pysapscript/: __init__.py  pysapscript.py  window.py
pysapscript/src/: pysapscript.py  window.py
pysapscript/src/types/: exceptions.py  types.py
pysapscript/src/utils/: utils.py
pysapscript/types_/: exceptions.py
pysapscript/utils/: utils.py
src/pysapscript/: __init__.py  main.py  pysapscript.py  shell_table.py  shell_tree.py  window.py
src/pysapscript/src/: __init__.py  config.py  utils.py
src/pysapscript/types_/: exceptions.py  types.py
src/pysapscript/utils/: utils.py
tests/: html_attached_test.py  manual_test.py  manual_test_table.py  manual_test_tree.py  table_attached_test.py
