[project]
name = "pysapscript"
version = "3.2.0"
description = "Automate SAP with python!"
readme = "README.md"
authors = [
    { name = "Kamil Democko", email = "democko_kamil@vseholding.sk" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.30.0",
    "pywin32>=310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pdoc3>=0.11.6",
]
