[project]
name = "pysapscript"
version = "3.2.1"
description = "Automate SAP with python!"
readme = "README.md"
authors = [
    { name = "Kamil Democko", email = "democko_kamil@vseholding.sk" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pywin32>=310",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
    "twine>=6.1.0",
]
