[metadata]
name = pysapscript
version = 1.0.2
author = Democko Kamil
author_email = kamil.democko@gmail.com
description = Library that allows you to control SAP
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/kamildemocko/pysapscript.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    wheel
    pandas
    pywin32

[options.packages.find]
where = src
